src/main/antlr4/jp/supership/elasticsearch/plugin/queryparser/dsl/Query.g4
/*
 * Supership Elasticsearch Query DSL.
 */
grammar Query;
import CommonLexerRules;

query      : (clause)*
           ;

clause     : expression (operator=('OR' | '|')? expression)*
           ;

expression : modifier=('-' | '_')? FIELD ':' term
           ;

term       : STRING                                          # StringTerm
           | NUMBER                                          # NumberTerm
           | '(' query ')'                                   # SubQueryTerm
           ;
